@@ -88,6 +88,7 @@
 * Ebanx: Remove default email [aenand] #4747
 * CyberSourceRest: Add stored credentials support [jherreraa] #4707
 * Payeezy: Add `last_name` for `add_network_tokenization` [naashton] #4743
+* Stripe PI: Tokenize payment method at Stripe for `verify` [aenand] #4748
 
 == Version 1.127.0 (September 20th, 2022)
 * BraintreeBlue: Add venmo profile_id [molbrown] #4512
